<resources>
    <string name="app_name">Airline Ticket Reservation System</string>
    <string name="author">author: Donald Dong (@donaldong)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reserve">Reserve</string>
    <string name="reservation">Reservations</string>
    <string name="cancel">My Reservations</string>
    <string name="add_flight">New Flight</string>
    <string name="logout">Log Out</string>
    <string name="choose_username">Choose your username</string>
    <string name="create_password">Create a password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="admin">Administrator Mode</string>
    <string name="transactions">Customer Transactions: </string>
    <string name="new_account">New Account</string>
    <string name="reserve_seat">Reserve Seat</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="select">Select</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="flight_no">Flight No.</string>
    <string name="departure_time">Departure Time</string>
    <string name="capacity">Capacity</string>
    <string name="price">Price</string>
    <string name="ticket">Tickets</string>
    <string name="num_of_tickets">Number of tickets:</string>
    <string name="arrow_to"> -> </string>
    <string name="error">Error</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="confirm_new_flight">Confirm New Flight</string>
    <string name="back">Back</string>
    <string name="reservation_id">No.</string>
    <string name="save">Save</string>
    <string name="flight_info">New Flight Information</string>
    <string name="enter_flight_number">Enter the flight number</string>
    <string name="enter_departure_date">Enter Departure Date</string>
    <string name="flight_capacity">Flight capacity</string>
    <string name="format_year">yyyy</string>
    <string name="format_month">MM</string>
    <string name="format_day">dd</string>
    <string name="format_hour">HH</string>
    <string name="format_minute">mm</string>
    <string name="success">Success</string>
    <string name="format_error_username">Username should have at least one number and three letters</string>
    <string name="format_error_password">Password should have at least one number and three letters</string>
    <string name="input_error_password_confirm">These passwords don\'t match. Try again?</string>
    <string name="input_error_duplicated_flight_number">That flight number is taken. Try another.</string>
    <string name="input_error_duplicated_username">That username is taken. Try another.</string>
    <string name="input_error_login_failure">The username or password you entered is incorrect</string>
    <string name="input_error_no_selection_flight">Please select a flight first</string>
    <string name="input_error_no_selection_reservation">Please select a reservation first</string>
    <string name="input_error_no_ticket">Please enter the number of ticket you want reserve</string>
    <string name="fatal_error_create_reservation_failure">Unable to create reservation</string>
    <string name="input_error_no_seat">There is no seats available on this flight. \nTry another one!</string>
    <string name="input_error_no_reservation">You did not make any reservations</string>
    <string name="input_error_invalid_departure_date">Please enter a valid departure time</string>
    <string name="input_error_same_city">Arrival city cannot be the same as departure city</string>
    <string name="input_error_no_capacity">Please enter the capacity of the flight</string>
    <string name="input_error_no_price">Please select the price</string>
    <string name="input_error_no_city">Please select the departure and arrival city</string>
</resources>
