<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/choose_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/et_create_account_username"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login"
                android:hint="@string/username" />
        <TextView
                android:id="@+id/error_msg_username"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/et_create_account_pwd"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login"
                android:hint="@string/password" />
        <TextView
                android:id="@+id/error_msg_password"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/et_create_account_pwd_confirm"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login"
                android:hint="@string/password" />
        <TextView
                android:id="@+id/error_msg_password_confirm"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_marginTop="30dp"
                android:id="@+id/btn_register"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register" />
    </LinearLayout>
    <Button
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:id="@+id/btn_back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/login" />
</RelativeLayout>