<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/layout_admin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_admin_username"
                android:layout_marginBottom="15dp"
                android:textSize="40sp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/admin"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TableLayout
            android:id="@+id/table_customer_buttons"
            android:layout_alignParentBottom="true"
            android:stretchColumns="*"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <Button
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_alignParentBottom="true"
                    android:text="@string/back" />
            <Button
                    android:id="@+id/btn_add_flight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/save" />
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_below="@id/layout_admin_top"
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow>
            <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/flight_info"/>
        </TableRow>
        <TableRow android:paddingTop="15dp">
            <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical">
                <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/enter_flight_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:id="@+id/et_flight_no"
                        android:maxLines="1"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_normal"
                        android:hint="@string/flight_no" />
                <TextView
                        android:id="@+id/error_msg_flight_no"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departure"/>
                <Spinner
                        android:id="@+id/spinner_departure"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">

                </Spinner>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrival"/>
                <Spinner
                        android:id="@+id/spinner_arrival"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">
                </Spinner>
            </LinearLayout>
        </TableRow>
        <TableRow android:paddingTop="15dp">
            <TextView
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/enter_departure_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/departure_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <EditText
                        android:id="@+id/et_year"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/format_year"/>
                <EditText
                        android:id="@+id/et_month"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/format_month"/>
                <EditText
                        android:id="@+id/et_day"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/format_day"/>
            </LinearLayout>
            <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <EditText
                        android:id="@+id/et_hour"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/format_hour"/>
                <EditText
                        android:id="@+id/et_minute"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/format_minute"/>
            </LinearLayout>
        </TableRow>
        <TextView
                android:gravity="center"
                android:id="@+id/error_msg_departure_time"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TableRow android:paddingTop="5dp">
            <TextView
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/flight_capacity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <EditText
                        android:id="@+id/et_capacity"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <EditText
                        android:id="@+id/et_price"
                        android:maxLines="1"
                        android:gravity="end"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>