<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/tv_customer_username"
            android:layout_marginBottom="15dp"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tv_customer_reservation"
            android:layout_below="@id/tv_customer_username"
            android:text="@string/reservation"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TableLayout
            android:id="@+id/table_customer_buttons"
            android:layout_alignParentBottom="true"
            android:stretchColumns="*"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <Button
                    android:id="@+id/btn_back"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/back" />
            <Button
                    android:id="@+id/btn_cancel"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel_reservation" />
        </TableRow>
    </TableLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/table_customer_buttons"
            android:layout_below="@id/tv_customer_reservation"
            android:scrollbars="none">
        <TableLayout
                android:id="@+id/table_customer_reservations"
                android:stretchColumns="*"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableRow>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/reservation_id"/>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/flight_no"/>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/departure_time"/>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="0.6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/ticket"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>