<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/tv_customer_username"
            android:layout_marginBottom="15dp"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TableLayout
            android:id="@+id/table_customer_city"
            android:layout_below="@id/tv_customer_username"
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departure"/>
                <Spinner
                        android:id="@+id/spinner_departure"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">

                </Spinner>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrival"/>
                <Spinner
                        android:id="@+id/spinner_arrival"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">
                </Spinner>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/logout" />
    <TableLayout
            android:id="@+id/table_customer_buttons"
            android:layout_above="@id/btn_logout"
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <Button
                    android:id="@+id/btn_cancel"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel" />
            <Button
                    android:id="@+id/btn_reserve"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/reserve" />
        </TableRow>
    </TableLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/table_customer_buttons"
            android:layout_below="@id/table_customer_city"
            android:scrollbars="none">
        <TableLayout
                android:id="@+id/table_customer_flights"
                android:stretchColumns="*"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableRow>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/flight_no"/>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/departure_time"/>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/capacity"/>
                <TextView
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/cell_title"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/price"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>