<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/layout_admin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_admin_username"
                android:layout_marginBottom="15dp"
                android:textSize="40sp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/admin"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/logout" />
    <Button
            android:id="@+id/btn_add_flight"
            android:layout_above="@id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/add_flight" />
    <TextView
            android:id="@+id/tv_admin_transaction_title"
            android:layout_below="@id/layout_admin_top"
            android:text="@string/transactions"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <ScrollView
            android:layout_above="@id/btn_add_flight"
            android:layout_below="@id/tv_admin_transaction_title"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/linear_admin_transactions"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </LinearLayout>
    </ScrollView>
</RelativeLayout>